--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,263 @@
+/*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*
+Document
+========
+*/
+/**
+Use a better box model (opinionated).
+*/
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+/**
+1. Correct the line height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+3. Use a more readable tab size (opinionated).
+*/
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -moz-tab-size: 4;
+  /* 3 */
+  tab-size: 4;
+  /* 3 */
+}
+
+/*
+Sections
+========
+*/
+/**
+1. Remove the margin in all browsers.
+2. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+*/
+body {
+  margin: 0;
+  /* 1 */
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  /* 2 */
+}
+
+/*
+Grouping content
+================
+*/
+/**
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+*/
+hr {
+  height: 0;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+}
+
+/*
+Text-level semantics
+====================
+*/
+/**
+Add the correct text decoration in Chrome, Edge, and Safari.
+*/
+abbr[title] {
+  text-decoration: underline dotted;
+}
+
+/**
+Add the correct font weight in Edge and Safari.
+*/
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+2. Correct the odd 'em' font sizing in all browsers.
+*/
+code,
+kbd,
+samp,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+Add the correct font size in all browsers.
+*/
+small {
+  font-size: 80%;
+}
+
+/**
+Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
+*/
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/*
+Tabular data
+============
+*/
+/**
+1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+*/
+table {
+  text-indent: 0;
+  /* 1 */
+  border-color: inherit;
+  /* 2 */
+}
+
+/*
+Forms
+=====
+*/
+/**
+1. Change the font styles in all browsers.
+2. Remove the margin in Firefox and Safari.
+*/
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+Remove the inheritance of text transform in Edge and Firefox.
+*/
+button,
+select {
+  text-transform: none;
+}
+
+/**
+Correct the inability to style clickable types in iOS and Safari.
+*/
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+Remove the inner border and padding in Firefox.
+*/
+::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+Restore the focus styles unset by the previous rule.
+*/
+:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+Remove the additional ':invalid' styles in Firefox.
+See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
+*/
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+/**
+Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
+*/
+legend {
+  padding: 0;
+}
+
+/**
+Add the correct vertical alignment in Chrome and Firefox.
+*/
+progress {
+  vertical-align: baseline;
+}
+
+/**
+Correct the cursor style of increment and decrement buttons in Safari.
+*/
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+Remove the inner padding in Chrome and Safari on macOS.
+*/
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Change font properties to 'inherit' in Safari.
+*/
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/*
+Interactive
+===========
+*/
+/*
+Add the correct display in Chrome and Safari.
+*/
+summary {
+  display: list-item;
+}
+
 /* RESET */
 .link {
   text-decoration: none;
@@ -63,6 +323,222 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
   margin: 0px auto;
+}
+
+.hero-section-btn {
+  display: block;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.hero-section-btn:hover,
+.hero-section-btn:active,
+.hero-section-btn:focus {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
+}
+
+.footer-button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 28px 10px 29px;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.sub-icon {
+  margin-left: 10px;
+  fill: var(--main-white-color);
+}
+
+.footer-button:hover,
+.footer-button:focus,
+.footer-button:active {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
+  fill: var(--button-hover-text-color);
+}
+
+.filter-btn {
+  padding: 6px 22px 6px 22px;
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: var(--secondary-background-color);
+  color: var(--secondary-black-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
+}
+
+.filter-btn.current {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
+}
+
+.filter-btn:focus,
+.filter-btn:hover,
+.filter-btn:active {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-close-btn:hover {
+  cursor: pointer;
+}
+
+.close-icon {
+  transition: fill var(--main-effects-option);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus .close-icon {
+  fill: var(--main-blue-color);
+}
+
+.modal-submit-btn {
+  display: block;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.modal-submit-btn:hover,
+.modal-submit-btn:active,
+.modal-submit-btn:focus {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
+}
+
+.customers-title {
+  margin-bottom: 50px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-black-color);
+}
+
+.hero-section-title {
+  max-width: 696px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--main-white-color);
+}
+
+.our-team-title {
+  margin-bottom: 50px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-black-color);
+}
+
+.our-work-title {
+  margin-bottom: 50px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-black-color);
+}
+
+.modal-title {
+  margin-bottom: 12px;
+  text-align: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-black-color);
 }
 
 .visually-hidden {
@@ -236,52 +712,6 @@ body {
   background-size: cover;
 }
 
-.hero-section-title {
-  max-width: 696px;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--main-white-color);
-}
-
-.hero-section-btn {
-  display: block;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.hero-section-btn:hover,
-.hero-section-btn:active,
-.hero-section-btn:focus {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
-}
-
 .features-section {
   margin-left: auto;
   margin-right: auto;
@@ -337,18 +767,6 @@ body {
   padding-top: 0px;
 }
 
-.our-work-title {
-  margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-black-color);
-}
-
 .our-work-list {
   display: flex;
   flex-wrap: wrap;
@@ -392,18 +810,6 @@ body {
 
 .our-team-section {
   background-color: var(--secondary-background-color);
-}
-
-.our-team-title {
-  margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-black-color);
 }
 
 .our-team-list {
@@ -487,18 +893,6 @@ body {
 .social-link-icon {
   fill: var(--social-links-icon-color);
   transition: fill var(--main-effects-option);
-}
-
-.customers-title {
-  margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-black-color);
 }
 
 .customers-list {
@@ -700,41 +1094,6 @@ body {
   outline: none;
 }
 
-.footer-button {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px 28px 10px 29px;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.sub-icon {
-  margin-left: 10px;
-  fill: var(--main-white-color);
-}
-
-.footer-button:hover,
-.footer-button:focus,
-.footer-button:active {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
-  fill: var(--button-hover-text-color);
-}
-
 .projects-filter-list {
   display: flex;
   flex-wrap: wrap;
@@ -744,36 +1103,6 @@ body {
 
 .projects-filter-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.filter-btn {
-  padding: 6px 22px 6px 22px;
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  background-color: var(--secondary-background-color);
-  color: var(--secondary-black-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
-}
-
-.filter-btn.current {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-}
-
-.filter-btn:focus,
-.filter-btn:hover,
-.filter-btn:active {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects-list {
@@ -887,46 +1216,6 @@ body {
   left: 50%;
   transform: scale(1) translate(-50%, -50%);
   transition: transform var(--main-effects-option);
-}
-
-.modal-close-btn {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal-close-btn:hover {
-  cursor: pointer;
-}
-
-.close-icon {
-  transition: fill var(--main-effects-option);
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus .close-icon {
-  fill: var(--main-blue-color);
-}
-
-.modal-title {
-  margin-bottom: 12px;
-  text-align: center;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-black-color);
 }
 
 .form-field {
@@ -1062,34 +1351,5 @@ body {
   color: var(--main-blue-color);
   text-decoration: underline solid var(--main-blue-color);
   text-decoration-skip-ink: none;
-}
-
-.modal-submit-btn {
-  display: block;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.modal-submit-btn:hover,
-.modal-submit-btn:active,
-.modal-submit-btn:focus {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
 }
 /*# sourceMappingURL=main.css.map */
