--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,41 +23,7 @@
   transform: scale(1) translate(-50%, -50%);
   transition: transform var(--main-effects-option);
 }
-.modal-close-btn {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.modal-close-btn:hover {
-  cursor: pointer;
-}
-.close-icon {
-  transition: fill var(--main-effects-option);
-}
-.modal-close-btn:hover,
-.modal-close-btn:focus .close-icon {
-  fill: var(--main-blue-color);
-}
-.modal-title {
-  margin-bottom: 12px;
-  text-align: center;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-black-color);
-}
+
 .form-field {
   margin-bottom: 10px;
 }
@@ -80,12 +46,12 @@
   border-radius: 4px;
   outline: none;
   transition: border-color var(--main-effects-option);
-}
-.modal-input:focus {
-  border-color: var(--main-blue-color);
-}
-.modal-input:focus + .input-icon {
-  fill: var(--main-blue-color);
+  &:focus {
+    border-color: var(--main-blue-color);
+  }
+  &:focus + .input-icon {
+    fill: var(--main-blue-color);
+  }
 }
 .input-label {
   display: block;
@@ -112,18 +78,18 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
-}
-.modal-comment-area:focus {
-  border-color: var(--main-blue-color);
-}
-.modal-comment-area::placeholder {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  &:focus {
+    border-color: var(--main-blue-color);
+  }
+  &::placeholder {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 .modal-checkbox-field {
   margin-bottom: 30px;
@@ -139,29 +105,35 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
-}
-.modal-check-text span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--main-black-color);
-  border-radius: 2px;
-  margin-right: 8px;
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--main-black-color);
+    border-radius: 2px;
+    margin-right: 8px;
+  }
 }
 .icon-check {
   fill: transparent;
 }
-.modal-check:focus + .modal-check-text span {
-  border-color: var(--main-blue-color);
+.modal-check:focus + .modal-check-text {
+  span {
+    border-color: var(--main-blue-color);
+  }
 }
-.modal-check:checked + .modal-check-text span {
-  background-color: var(--main-blue-color);
-  border: none;
+.modal-check:checked + .modal-check-text {
+  span {
+    background-color: var(--main-blue-color);
+    border: none;
+  }
 }
-.modal-check:checked + .modal-check-text .icon-check {
-  fill: var(--main-white-color);
+.modal-check:checked + .modal-check-text {
+  .icon-check {
+    fill: var(--main-white-color);
+  }
 }
 .terms-link {
   font-family: Roboto, sans-serif;
@@ -173,32 +145,4 @@
   color: var(--main-blue-color);
   text-decoration: underline solid var(--main-blue-color);
   text-decoration-skip-ink: none;
-}
-.modal-submit-btn {
-  display: block;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option),
-    background-color var(--main-effects-option);
-}
-.modal-submit-btn:hover,
-.modal-submit-btn:active,
-.modal-submit-btn:focus {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
 }
