--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,18 @@
+@import "./vendors/modern-normalize";
 @import "./utils/reset";
 @import "./utils/variables";
-@import "./components/header-contacts";
-@import "./components/header";
-@import "./components/navigation";
-@import "./components/hero";
-@import "./components/features";
-@import "./components/our-work";
-@import "./components/our-team";
-@import "./components/customers";
-@import "./components/footer";
-@import "./components/projects";
+@import "./components/container";
+@import "./components/buttons";
+@import "./components/titles";
+@import "./utils/visually-hidden";
+@import "./layouts/header-contacts";
+@import "./layouts/header";
+@import "./layouts/navigation";
+@import "./layouts/hero";
+@import "./layouts/features";
+@import "./layouts/our-work";
+@import "./layouts/our-team";
+@import "./layouts/customers";
+@import "./layouts/footer";
+@import "./layouts/projects";
 @import "./components/modal";
