--- a/css/main.css
+++ b/css/main.css
@@ -347,9 +347,7 @@ body {
   transition: color var(--main-effects-option), background-color var(--main-effects-option);
 }
 
-.hero-section-btn:hover,
-.hero-section-btn:active,
-.hero-section-btn:focus {
+.hero-section-btn:hover, .hero-section-btn:active, .hero-section-btn:focus {
   background-color: var(--button-hover-color);
   color: var(--button-hover-text-color);
 }
@@ -376,17 +374,15 @@ body {
   transition: color var(--main-effects-option), background-color var(--main-effects-option);
 }
 
-.sub-icon {
-  margin-left: 10px;
-  fill: var(--main-white-color);
-}
-
-.footer-button:hover,
-.footer-button:focus,
-.footer-button:active {
+.footer-button:hover, .footer-button:focus, .footer-button:active {
   background-color: var(--button-hover-color);
   color: var(--button-hover-text-color);
   fill: var(--button-hover-text-color);
+}
+
+.sub-icon {
+  margin-left: 10px;
+  fill: var(--main-white-color);
 }
 
 .filter-btn {
@@ -406,17 +402,15 @@ body {
   transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
 }
 
-.filter-btn.current {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-}
-
-.filter-btn:focus,
-.filter-btn:hover,
-.filter-btn:active {
+.filter-btn:focus, .filter-btn:hover, .filter-btn:active {
   background-color: var(--main-blue-color);
   color: var(--main-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-btn.current {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
 }
 
 .modal-close-btn {
@@ -437,13 +431,13 @@ body {
   cursor: pointer;
 }
 
-.close-icon {
-  transition: fill var(--main-effects-option);
-}
-
 .modal-close-btn:hover,
 .modal-close-btn:focus .close-icon {
   fill: var(--main-blue-color);
+}
+
+.close-icon {
+  transition: fill var(--main-effects-option);
 }
 
 .modal-submit-btn {
@@ -468,9 +462,7 @@ body {
   transition: color var(--main-effects-option), background-color var(--main-effects-option);
 }
 
-.modal-submit-btn:hover,
-.modal-submit-btn:active,
-.modal-submit-btn:focus {
+.modal-submit-btn:hover, .modal-submit-btn:active, .modal-submit-btn:focus {
   background-color: var(--button-hover-color);
   color: var(--button-hover-text-color);
 }
