--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -11,6 +11,14 @@
   border-radius: 4px;
   border: solid 1px var(--social-links-icon-color);
   transition: border-color var(--main-effects-option);
+  &:hover,
+  &:focus {
+    border-color: var(--main-blue-color);
+  }
+  &:hover .customer-icon,
+  &:focus .customer-icon {
+    fill: var(--main-blue-color);
+  }
 }
 .customer-item:not(:last-child) {
   margin-right: 30px;
@@ -20,12 +28,4 @@
   height: 60px;
   fill: var(--social-links-icon-color);
   transition: fill var(--main-effects-option);
-}
-.customer-link:hover,
-.customer-link:focus {
-  border-color: var(--main-blue-color);
-}
-.customer-link:hover .customer-icon,
-.customer-link:focus .customer-icon {
-  fill: var(--main-blue-color);
 }
