--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -21,12 +21,13 @@
   letter-spacing: 0.02em;
   color: var(--secondary-black-color);
   transition: color var(--main-effects-option);
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--main-blue-color);
+  }
 }
-.nav-link:hover,
-.nav-link:focus,
-.nav-link:active {
-  color: var(--main-blue-color);
-}
+
 .nav-link-current {
   display: block;
   padding-top: 32px;
@@ -40,14 +41,14 @@
   letter-spacing: 0.02em;
   color: var(--main-blue-color);
   position: relative;
-}
-.nav-link-current::after {
-  content: "";
-  background-color: var(--main-blue-color);
-  width: 100%;
-  height: 4px;
-  border-radius: 4px;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
+  &::after {
+    content: "";
+    background-color: var(--main-blue-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+  }
 }
