--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -23,10 +23,11 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  &:nth-child(4n) {
+    margin-right: 0px;
+  }
 }
-.our-team-item:nth-child(4n) {
-  margin-right: 0px;
-}
+
 .team-mate-info {
   padding: 30px 32px;
 }
@@ -48,10 +49,11 @@
 .social-links-item {
   width: 44px;
   height: 44px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
-.social-links-item:not(:last-child) {
-  margin-right: 10px;
-}
+
 .social-link {
   width: 100%;
   height: 100%;
@@ -60,14 +62,14 @@
   align-items: center;
   justify-content: center;
   transition: background-color var(--main-effects-option);
-}
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--main-blue-color);
-}
-.social-link:hover .social-link-icon,
-.social-link:focus .social-link-icon {
-  fill: var(--main-white-color);
+  &:hover,
+  &:focus {
+    background-color: var(--main-blue-color);
+  }
+  &:hover .social-link-icon,
+  &:focus .social-link-icon {
+    fill: var(--main-white-color);
+  }
 }
 
 .social-link-icon {
