--- a/sass/layouts/_our-work.scss
+++ b/sass/layouts/_our-work.scss
@@ -1,7 +1,3 @@
-.our-work-section {
-  padding-top: 0px;
-}
-
 .our-work-list {
   display: flex;
   flex-wrap: wrap;
@@ -10,10 +6,14 @@
   margin-right: 30px;
   position: relative;
   overflow: hidden;
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+  &:hover .our-work-overlay {
+    transform: translateY(0);
+  }
 }
-.our-work-item:nth-child(3n) {
-  margin-right: 0px;
-}
+
 .our-work-overlay {
   width: 100%;
   height: 70px;
@@ -35,7 +35,4 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-white-color);
-}
-.our-work-item:hover .our-work-overlay {
-  transform: translateY(0);
 }
