--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -16,22 +16,28 @@
   margin-bottom: 30px;
   width: 370px;
   height: auto;
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
 }
 .project-link {
   display: block;
   max-width: 100%;
   height: 100%;
   transition: box-shadow var(--main-effects-option);
+  &:hover,
+  &:focus,
+  &:active {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:hover .project-about,
+  &:focus .project-about,
+  &:active .project-about {
+    transform: translateY(0);
+  }
 }
-.projects-item:nth-child(3n) {
-  margin-right: 0px;
-}
-.project-link:hover,
-.project-link:focus,
-.project-link:active {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .projects-text-container {
   padding: 20px 24px;
   border-right: solid 1px var(--portfolio-item-border-color);
@@ -78,9 +84,4 @@
     background-color var(--main-effects-option);
   padding: 63px 24px;
   height: 100%;
-}
-.project-link:hover .project-about,
-.project-link:focus .project-about,
-.project-link:active .project-about {
-  transform: translateY(0);
 }
