--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,20 +1,12 @@
 .hero-section-btn {
-  display: block;
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--main-blue-color);
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
+  @include main-buttons-font();
+  @extend %flex-elements;
   color: var(--main-white-color);
   cursor: pointer;
   transition: color var(--main-effects-option),
@@ -28,22 +20,14 @@
 }
 
 .footer-button {
-  display: flex;
+  @extend %flex-elements;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 28px 10px 29px;
   background-color: var(--main-blue-color);
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
+  @include main-buttons-font();
   color: var(--main-white-color);
   cursor: pointer;
   transition: color var(--main-effects-option),
@@ -65,13 +49,8 @@
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
+  @include portfolio-filter-btn-font();
+  @extend %flex-elements;
   background-color: var(--secondary-background-color);
   color: var(--secondary-black-color);
   cursor: pointer;
@@ -93,6 +72,7 @@
 }
 
 .modal-close-btn {
+  @extend %flex-elements;
   position: absolute;
   right: 8px;
   top: 8px;
@@ -101,9 +81,6 @@
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   &:hover {
     cursor: pointer;
   }
@@ -118,22 +95,14 @@
 }
 
 .modal-submit-btn {
-  display: block;
+  @extend %flex-elements;
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--main-blue-color);
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
+  @include main-buttons-font();
   color: var(--main-white-color);
   cursor: pointer;
   transition: color var(--main-effects-option),
