--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -124,6 +124,14 @@
   line-height: 1.17;
   letter-spacing: 0.01em;
 }
+@mixin modal-check-font() {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
 // PORTFOLIO FONTS
 @mixin portfolio-filter-btn-font() {
   font-family: Roboto, sans-serif;
