added titles fonts

--- a/css/main.css
+++ b/css/main.css
@@ -506,14 +506,12 @@ body {
 
 .modal-title {
   margin-bottom: 12px;
-  text-align: center;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--secondary-black-color);
 }
 
