--- a/css/main.css
+++ b/css/main.css
@@ -867,9 +867,6 @@ body {
 .customer-link {
   width: 170px;
   height: 92px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 4px;
   border: solid 1px var(--social-links-icon-color);
   transition: border-color var(--main-effects-option);
@@ -1305,7 +1302,7 @@ body {
   text-decoration-skip-ink: none;
 }
 
-.hero-section-btn, .footer-button, .filter-btn, .modal-close-btn, .modal-submit-btn, .modal-check-text, .modal-check-text span {
+.hero-section-btn, .footer-button, .filter-btn, .modal-close-btn, .modal-submit-btn, .customer-link, .modal-check-text, .modal-check-text span {
   display: flex;
   align-items: center;
   text-align: center;
