--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -5,9 +5,7 @@
 .customer-link {
   width: 170px;
   height: 92px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend %flex-elements;
   border-radius: 4px;
   border: solid 1px var(--social-links-icon-color);
   transition: border-color var(--main-effects-option);
