--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -107,6 +107,23 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+@mixin footer-adress-font() {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+@mixin footer-contacts-link-font() {
+  text-decoration: none;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
 // MODAL FONTS
 @mixin modal-title-font() {
   font-family: Roboto, sans-serif;
