--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,20 +9,86 @@
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 24px;
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  @include logo-font();
   color: var(--main-blue-color);
 }
 .r-logo-header {
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  @include logo-font();
   color: var(--main-black-color);
+}
+.nav {
+  display: flex;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+}
+.nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+.nav-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  @include nav-link-font();
+  color: var(--secondary-black-color);
+  transition: color var(--main-effects-option);
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--main-blue-color);
+  }
+}
+.nav-link-current {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  @include nav-link-font();
+  color: var(--main-blue-color);
+  position: relative;
+  &::after {
+    content: "";
+    background-color: var(--main-blue-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+  }
+}
+.contacts-list {
+  display: flex;
+  margin-left: 305px;
+  justify-content: center;
+  align-content: center;
+}
+.contacts-item:not(:last-child) {
+  margin-right: 30px;
+}
+.contacts-link {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  @include contacts-link-font();
+  color: var(--main-text-color);
+  transition: color var(--main-effects-option);
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--main-blue-color);
+  }
+  &:hover .contacts-icon,
+  &:focus .contacts-icon,
+  &:active .contacts-icon {
+    fill: var(--main-blue-color);
+  }
+}
+.contacts-icon {
+  margin-right: 10px;
+  fill: var(--main-text-color);
+  transition: fill var(--main-effects-option);
 }
