--- a/sass/layouts/_our-work.scss
+++ b/sass/layouts/_our-work.scss
@@ -25,14 +25,6 @@
   bottom: 0;
   transform: translateY(100%);
   transition: transform var(--main-effects-option);
-
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+  @include our-work-overlay-font();
   color: var(--main-white-color);
 }
