--- a/css/main.css
+++ b/css/main.css
@@ -1132,7 +1132,7 @@ body {
 }
 
 .project-about {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
