--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -46,21 +46,11 @@
 }
 .projects-subtitle {
   padding-top: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+  @include projects-subtitle-font();
   color: var(--secondary-black-color);
 }
 .projects-text {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
+  @include projects-text-font();
   color: var(--main-text-color);
 }
 .overlay-wrapper {
@@ -68,12 +58,7 @@
   overflow: hidden;
 }
 .project-about {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
+  @include portfolio-overlay-font();
   background-color: rgba(33, 150, 243, 0.9);
   color: rgba(255, 255, 255, 1);
   position: absolute;
