--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -1,7 +1,11 @@
 .our-team-section {
   background-color: var(--secondary-background-color);
 }
-
+.our-team-title {
+  margin-bottom: 50px;
+  @include main-title-font();
+  color: var(--secondary-black-color);
+}
 .our-team-list {
   display: flex;
   flex-wrap: wrap;
