--- a/css/main.css
+++ b/css/main.css
@@ -634,7 +634,7 @@ body {
   background-size: cover;
 }
 
-.features-section {
+.features {
   margin-left: auto;
   margin-right: auto;
 }
@@ -653,7 +653,7 @@ body {
   margin: 0px;
 }
 
-.feature-icon-container {
+.features__icon-container {
   display: flex;
   width: 270px;
   height: 120px;
@@ -663,7 +663,7 @@ body {
   background-color: var(--secondary-background-color);
 }
 
-.features-subtitle {
+.features-item__title {
   margin-bottom: 10px;
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -675,7 +675,7 @@ body {
   color: var(--secondary-black-color);
 }
 
-.features-text {
+.features-item__text {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
