--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,4 +1,4 @@
-.features-section {
+.features {
   margin-left: auto;
   margin-right: auto;
 }
@@ -14,7 +14,7 @@
   }
 }
 
-.feature-icon-container {
+.features__icon-container {
   display: flex;
   width: 270px;
   height: 120px;
@@ -23,12 +23,12 @@
   margin-bottom: 30px;
   background-color: var(--secondary-background-color);
 }
-.features-subtitle {
+.features-item__title {
   margin-bottom: 10px;
   @include features-subtitles-font();
   color: var(--secondary-black-color);
 }
-.features-text {
+.features-item__text {
   @include main-text-font();
   color: var(--main-text-color);
 }
